deployments/vehicleservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-vehicle-deployment
spec:
  selector:
    matchLabels:
      app: springboot-vehicle-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: springboot-vehicle-mongo
    spec:
      containers:
        - name: vehicle-service
          image: zahira18/vehicle-service-deployment
          ports:
            - containerPort: 8080
