deployments/mailhog-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  labels:
    app: mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
        - name: mailhog
          image: mailhog/mailhog:latest
          ports:
            - containerPort: 1025
---
apiVersion: v1
kind: Service
metadata:
  name: mail-service
spec:
  selector:
    app: mailhog
  ports:
    - protocol: TCP
      port: 1025
      targetPort: 1025
  type: ClusterIP
