deployments/mongo-db-workshop.yml
# Deployment for MongoDB server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-workshop # Unique name for this deployment
  labels:
    app: mongo-workshop
    tier: database
spec:
  selector: # Must match labels in the template
    matchLabels:
      app: mongo-workshop
      tier: database
  strategy:
    type: Recreate # Recreates the pod if changes are made
  template:
    metadata:
      labels:
        app: mongo-workshop
        tier: database
    spec:
      containers:
        - name: mongo-workshop
          image: mongo:5.0 # Specify MongoDB image version
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db # Mount point for persistent data
      volumes:
        - name: mongo-persistent-storage
          persistentVolumeClaim:
            claimName: mongo-workshop-pv-claim # Match the PVC name
---
# Service to expose MongoDB within the cluster
apiVersion: v1
kind: Service
metadata:
  name: mongo-workshop # Use a unique name for the service
  labels:
    app: mongo-workshop
    tier: database
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector: # Match the deployment's labels
    app: mongo-workshop
    tier: database
  type: ClusterIP # Default; accessible within the cluster
