deployments/shema-registry-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schema-registry
  template:
    metadata:
      labels:
        app: schema-registry
    spec:
      containers:
        - name: schema-registry
          image: confluentinc/cp-schema-registry:latest
          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: schema-registry-service
spec:
  selector:
    app: schema-registry
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
  type: ClusterIP
