deployments/workshop-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-planning-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workshop-planning-service
  template:
    metadata:
      labels:
        app: workshop-planning-service
    spec:
      containers:
        - name: workshop-planning-service
          image: zahira18/workshop-planning-service
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: workshop-service
spec:
  selector:
    app: workshop-planning-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: LoadBalancer
